--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "sqlite3": "^3.1.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5"
   }
 }
