--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.13.1",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
+    "formidable": "^1.0.17",
     "jade": "~1.11.0",
     "mongodb": "^2.1.7",
     "morgan": "~1.6.1",
