--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
     "serve-favicon": "~2.3.0",
+    "session-mongoose": "^0.5.2",
     "sqlite3": "^3.1.1"
   },
   "devDependencies": {
